--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <sonar.organization>richardspencesoftware</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <build>
@@ -51,6 +53,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
